--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -68,6 +68,135 @@ p {
   }
 }
 
+/* Email-spinner */
+.lds-ellipsis {
+	display: inline-block;
+	position: relative;
+	width: 40px;
+	height: 1.2rem;
+
+  div {
+    position: absolute;
+    top: 0.5rem;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: #740074;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+
+  div:nth-child(1) {
+    left: 4px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  div:nth-child(2) {
+    left: 4px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  div:nth-child(3) {
+    left: 16px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  div:nth-child(4) {
+    left: 28px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(12px, 0);
+    }
+  }
+}
+
+/* Heart */
+.heart {
+  position: relative;
+  width: 100px;
+  height: 90px;
+  animation: heartbeat 1.5s infinite;
+  margin: 0.5rem auto;
+
+  &::before,
+  &::after {
+    position: absolute;
+    content: "";
+    left: 50px;
+    top: 0;
+    width: 50px;
+    height: 80px;
+    background: #740074;
+    -moz-border-radius: 50px 50px 0 0;
+    border-radius: 50px 50px 0 0;
+    -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    -webkit-transform-origin: 0 100%;
+      -moz-transform-origin: 0 100%;
+        -ms-transform-origin: 0 100%;
+        -o-transform-origin: 0 100%;
+            transform-origin: 0 100%;
+  }
+
+  &::after {
+    left: 0;
+    -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+            transform: rotate(45deg);
+    -webkit-transform-origin: 100% 100%;
+      -moz-transform-origin: 100% 100%;
+        -ms-transform-origin: 100% 100%;
+        -o-transform-origin: 100% 100%;
+            transform-origin :100% 100%;
+  }
+
+  @keyframes heartbeat {
+    0% {
+      transform: scale( 0.75 );
+    }
+    20% {
+      transform: scale( 1 );
+    }
+    40% {
+      transform: scale( 0.75 );
+    }
+    60% {
+      transform: scale( 1 );
+    }
+    80% {
+      transform: scale( 0.75 );
+    } 
+    100% {
+      transform: scale( 0.75 );
+    }
+  }
+}
+
+
+
 
 
 /* Navbar */
@@ -562,7 +691,10 @@ p {
 .form-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 1rem;
+  height: 450px;
+  width: 300px;
 }
 
 .form-item {
@@ -922,6 +1054,11 @@ p {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+  }
+
+  .form-container {
+    height: 490px;
+    width: 360px;
   }
 
   .connect-details {
