--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import './spinners';
+@import './navbar';
+
 
 * {
   margin: 0;
@@ -68,280 +71,10 @@ p {
   }
 }
 
-/* Email-spinner */
-.lds-ellipsis {
-	display: inline-block;
-	position: relative;
-	width: 40px;
-	height: 1.2rem;
-
-  div {
-    position: absolute;
-    top: 0.5rem;
-    width: 7px;
-    height: 7px;
-    border-radius: 50%;
-    background: #740074;
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
-  }
-
-  div:nth-child(1) {
-    left: 4px;
-    animation: lds-ellipsis1 0.6s infinite;
-  }
-  div:nth-child(2) {
-    left: 4px;
-    animation: lds-ellipsis2 0.6s infinite;
-  }
-  div:nth-child(3) {
-    left: 16px;
-    animation: lds-ellipsis2 0.6s infinite;
-  }
-  div:nth-child(4) {
-    left: 28px;
-    animation: lds-ellipsis3 0.6s infinite;
-  }
-
-  @keyframes lds-ellipsis1 {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  @keyframes lds-ellipsis3 {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(0);
-    }
-  }
-  @keyframes lds-ellipsis2 {
-    0% {
-      transform: translate(0, 0);
-    }
-    100% {
-      transform: translate(12px, 0);
-    }
-  }
-}
-
-/* Heart */
-.heart {
-  position: relative;
-  width: 100px;
-  height: 90px;
-  animation: heartbeat 1.5s infinite;
-  margin: 0.5rem auto;
-
-  &::before,
-  &::after {
-    position: absolute;
-    content: "";
-    left: 50px;
-    top: 0;
-    width: 50px;
-    height: 80px;
-    background: #740074;
-    -moz-border-radius: 50px 50px 0 0;
-    border-radius: 50px 50px 0 0;
-    -webkit-transform: rotate(-45deg);
-      -moz-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-    -webkit-transform-origin: 0 100%;
-      -moz-transform-origin: 0 100%;
-        -ms-transform-origin: 0 100%;
-        -o-transform-origin: 0 100%;
-            transform-origin: 0 100%;
-  }
-
-  &::after {
-    left: 0;
-    -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-            transform: rotate(45deg);
-    -webkit-transform-origin: 100% 100%;
-      -moz-transform-origin: 100% 100%;
-        -ms-transform-origin: 100% 100%;
-        -o-transform-origin: 100% 100%;
-            transform-origin :100% 100%;
-  }
-
-  @keyframes heartbeat {
-    0% {
-      transform: scale( 0.75 );
-    }
-    20% {
-      transform: scale( 1 );
-    }
-    40% {
-      transform: scale( 0.75 );
-    }
-    60% {
-      transform: scale( 1 );
-    }
-    80% {
-      transform: scale( 0.75 );
-    } 
-    100% {
-      transform: scale( 0.75 );
-    }
-  }
-}
 
 
 
 
-
-/* Navbar */
-.navbar {
-  background: #9f026e;
-  color: #efe6e6;
-  border-bottom: 1px solid #8e0262;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  padding: 0.5rem 1rem;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  transition: 0.3s linear;
-  z-index: 1;
-}
-
-.hidden {
-  height: 5rem;
-  width: 100%;
-  z-index: 40;
-  position: fixed;
-  top: -80px;
-  transition: 0.3s linear;
-}
-
-.navbar-container {
-  width: 90%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.logo-link {
-  display: inline-block;
-  text-decoration: none;
-  color: #efe6ee;
-  font-size: 1.35rem;
-  padding: 0.5rem;
-  text-align: center;
-}
-
-.collapse {
-  display: none;
-}
-
-.toggle-navbar {
-  display: none;
-}
-
-.navbar-toggler {
-  font-size: 2rem;
-  height: 2rem;
-  width: 2rem;
-  color: #efe6e6;
-  background: transparent;
-  border: 1px solid transparent;
-  position: relative;
-  transition: ease-in-out 0.8s;
-
-  i {
-    height: 2rem;
-    width: 2rem;
-  }
-
-  .icon-left {
-    position: absolute;
-    top: 0;
-    right: 0;
-    transition: ease-in-out 0.5s;
-  }
-
-  .icon-right {
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: rotateY(180deg);
-    transition: ease-in-out 0.5s;
-    color: transparent;
-  }
-  
-  &:hover {
-    .icon-left {
-      transform: rotateY(180deg);
-      transition: ease-in-out 0.5s;
-      color: transparent;
-    }
-
-    .icon-right {
-      transform: rotateY(0deg);
-      transition: ease-in-out 0.5s;
-      color: #efe6e6;
-    }
-
-    .toggle-navbar {
-      display: block;
-      position: absolute;
-      right: 0.5rem;
-      top: 2rem;
-      border-radius: 8px 0 8px 8px;
-      width: 250px;
-      background: #8e0262;
-      transition: ease-in-out 1s;
-    }
-  }
-  
-}
-
-.navbar-collapse {
-  align-items: center;
-}
-
-.navbar-nav {
-  display: flex;
-  flex-direction: column;
-}
-
-.nav-links {
-  list-style: none;
-
-  li {
-    display: block;
-    cursor: pointer;
-    padding: 0.5rem 0;
-    border-bottom: 2px solid transparent;
-  }
-
-  li:hover,
-  .active {
-    color: #ffffff;
-    font-weight: 600;
-  }
-
-  a {
-    text-decoration: none;
-    color: #efe6e6;
-    font-size: 0.95rem;
-  }
-}
-
-.dogs-dropdown i {
-  display: none;
-}
 
 
 
@@ -825,11 +558,7 @@ p {
   .container {
     max-width: 720px;
   }
-
-  /* Navbar */
-  .logo-link {
-    font-size: 1.5rem;
-  }
+  
 
   /* Footer */
   .footer p {
@@ -908,91 +637,6 @@ p {
     padding: 1rem;
   }
   
-
-  /* Navbar */
-  .navbar {
-    padding: 0.5rem;
-  }
-
-  .navbar-container {
-    width: 100%;
-    padding: 0 0.2rem;
-  }
-
-  .logo-link {
-    font-size: 1.5rem;
-  }
-
-  .navbar-toggler {
-    display: none;
-  }
-
-  .collapse:not(.show) {
-    display: flex;
-  }
-
-  .navbar-nav {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-  }
-
-  .nav-links {
-    li {
-      word-wrap: break-word;
-      margin: 0.5rem;
-    }
-
-    a {
-      text-decoration: none;
-      color: #efe6e6;
-      font-size: 1rem;
-    }
-  }
-
-  .dogs-dropdown {
-    position: relative;
-
-    i {
-      display: inline-block;
-      margin-left: 0.5rem;
-    }
-  }
-
-  .dogs-dropdown-content {
-    display: none;
-    background: #9f026df6;
-    border-radius: 8px;
-    position: absolute;
-    top: 2rem;
-    transition: ease-in-out 0.5s;
-    box-shadow: 1px 1px 5px #2a002a63;
-
-    li {
-      display: block;
-      cursor: pointer;
-      padding: 0.5rem 0;
-      border-bottom: 2px solid transparent;
-      font-weight: 500;
-    }
-
-    li:hover,
-    .active {
-      color: #ffffff;
-      font-weight: 600;
-    }
-
-  }
-
-  .dogs-dropdown:hover {
-    .dogs-dropdown-content {
-      display: block;
-      z-index: 2;
-    }
-  }
-    
-
 
   /* Home */
   .home-choice {
@@ -1105,12 +749,6 @@ p {
     max-width: 1140px;
   }
 
-
-  /* Navbar */
-  .navbar-container {
-    width: 90%;
-  }
-  
 
   /* Dogs */
   .dogs-list {
@@ -1230,20 +868,6 @@ p {
 @media only screen and (min-width: 1400px) {
   .container {
     max-width: 1200px;
-  }
-
-  
-  /* Navbar */
-  .navbar-container {
-    max-width: 1300px;
-  }
-
-  .logo-link {
-    font-size: 1.5rem;
-  }
-
-  .nav-links a {
-    font-size: 1rem;
   }
 
 
