--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import './spinners';
 @import './navbar';
+@import './footer';
+@import './home';
+@import './dogs';
+@import './videos';
+@import './training';
+@import './daycare';
+@import './about';
+@import './connect';
+
 
 
 * {
@@ -30,7 +39,6 @@ html, body {
 }
 
 
-
 /* Headers etc */
 h1 {
   margin-top: 1rem;
@@ -52,6 +60,7 @@ p {
   font-size: 1rem;
 }
 
+
 /* Buttons */
 .btn {
   padding: 0.5rem 1rem;
@@ -72,482 +81,11 @@ p {
 }
 
 
-
-
-
-
-
-
-/* Footer */
-.footer {
-  margin-top: auto;
-  width: 100%;
-  text-align: center;
-  background: #9f026e;
-  color: #efe6e6;
-  padding: 1rem;
-
-  p {
-    font-size: 0.9rem;
-  }
-}
-
-.footer-container {
-  width: 90%;
-  margin: auto;
-  display: block;
-  justify-content: center;
-  align-items: center;
-}
-
-.social {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .social-item {
-    margin: 1rem;
-  }
-
-  a {
-    
-    text-decoration: none;
-    color: #efe6e6;
-    font-weight: 600;
-
-    &:hover {
-      color: #edb8e8;
-    }
-  }
-
-  i {
-    margin-right: 0.5rem;
-    color: #efe6e6;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-  
-    &:hover {
-      color: #edb8e8;
-    }
-  }
-}
-
-
-
-/* Home */
-.home-choice {
-  margin-top: 1rem;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.choice {
-  margin-bottom: 1rem;
-  background: #7802533b;
-  border: 1px solid transparent;
-  border-radius: 8px;
-  box-shadow: 1px 1px 5px #2a002a63;
-  padding: 1.5rem;
-  padding-bottom: 0.5rem;
-  cursor: pointer;
-  width: 55%;
-  -webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-
-  &:hover {
-    background: #ed92d280;
-    box-shadow: 1px 1px 8px #2a002a63;
-  }
-}
-
-.choice a {
-  text-decoration: none;
-  color: #740074;
-
-  &:focus {
-    color: #f245ca;
-  }
-}
-
-.choice-image img {
-  border-radius: 8px;
-  width: 100%;
-  -webkit-filter: grayscale(100%);
-	filter: grayscale(100%);
-  -webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-
-  &:hover {
-    -webkit-filter: grayscale(0);
-    filter: grayscale(0);
-  }
-}
-
-.choice-title {
-  text-align: center;
-  margin-top: 1rem;
-}
-
-
-
-/* Dogs */
-.dogs-img {
-  border-radius: 8px;
-  box-shadow: 1px 1px 5px #2a002a63;
-  overflow: hidden;
-  margin-bottom: 0.5rem;
-
-  img {
-    height: 100%;
-    width: 100%;
-    border-radius: 8px;
-  }
-}
-
-.img-a,
-.img-b {
-  display: none;
-}
-
-.dogs-text {
-  padding: 0 2rem;
-
-  p {
-    margin-left: 1rem;
-    margin-bottom: 1rem;
-  }
-}
-
-.dogs-list {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
-  list-style: none;
-  padding-left: 0.5rem;
-  margin-bottom: 1rem;
-
-  .dogs-list-item {
-    border: 1px solid transparent;
-    border-radius: 8px;
-    box-shadow: 1px 1px 5px #2a002a63;
-    padding: 1rem;
-    margin-bottom: 0.5rem;
-  
-    h3 {
-      text-align: center;
-      margin-bottom: 0.5rem;
-    }
-
-    h4 {
-      margin-top: 0.5rem;
-      margin-bottom: 0.3rem;
-    }
-  
-    p {
-      margin-bottom: 0;
-      margin-left: 0;
-    }
-  }
-}
-
-
-
-/* Videos */
-.video-content {
-  padding: 0.5rem 2rem;
-
-  .video-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1rem;
-
-    .youtube-video-container {
-      margin-bottom: 0.5rem;
-      position: relative;
-      width: 100%;
-      overflow: hidden;
-      padding-top: 56.25%;
-
-      .youtube-video {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        border: none;
-      }
-    }
-  }
-}
-
-
-
-/* Training */
-.one-pic {
-  width: 80%;
-  display: block;
-  margin: auto;
-
-  img {
-    width: 100%;
-    border-radius: 8px;
-  }
-}
-
-.two-pics {
-  display: none;
-}
-
-.three-pics {
-  display: none;
-}
-
-.training-text {
-  width: 90%;
-  margin: auto;
-
-  h4 {
-    font-size: 1.2rem;
-    text-align: center;
-    margin-top: 0.5rem;
-  }
-
-  p {
-    margin-bottom: 0.5rem;
-  }
-
-  .training-price {
-    margin-bottom: 0.2rem;
-    font-weight: 600;
-  }
-
-  .for-sale {
-    padding-bottom: 0.5rem;
-    font-style: italic;
-    font-size: small;
-  }
-}
-
-
-
-/* Daycare */
-.daycare-image {
-  margin-top: 1rem;
-  width: 60%;
-  margin: auto;
-
-  .daycare-both-img {
-    display: none;
-  }
-
-  .daycare-big-img {
-    display: none;
-  }
-
-  img {
-    width: 100%;
-    border-radius: 8px;
-  }
-}
-
-.daycare-content {
-  width: 80%;
-  margin: auto;
-  margin-bottom: 2rem;
-
-  p {
-    margin-bottom: 0.5rem;
-  }
-}
-
-.price-title {
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-.prices {
-  display: block;
-  text-align: center;
-
-  h3 {
-    margin-top: 1rem;
-  }
-
-  h4 {
-    margin: 0.5rem 0;
-  }
-
-  p {
-    margin-bottom: 0.5rem;
-  }
-
-  .price-list {
-    list-style: none;
-    margin-bottom: 0.5rem;
-  }
-}
-
-.daycare-social {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-
-  a {
-    text-decoration: none;
-    color: #740074;
-    font-weight: 600;
-    font-size: 1rem;
-
-    &:hover {
-      color: #9f026e;
-    }
-  }
-}
-
-
-
-/* About */
-.about-img {
-  width: 65%;
-  display: block;
-  margin: auto;
-
-  img {
-    border-radius: 8px;
-    margin: auto;
-    width: 100%;
-  }
-}
-
-.about-text {
-  padding: 0.5rem 2rem;
-
-  p {
-    margin-bottom: 0.5rem;
-  }
-}
-
-
-
-/* Connect */
-.connect-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.form-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-  height: 450px;
-  width: 300px;
-}
-
-.form-item {
-  margin-bottom: 1.2rem;
-  text-align: center;
-
-  input,
-  label {
-    display: block;
-  }
-
-  label {
-    margin-bottom: 0.5rem;
-    text-align: center;
-  }
-
-  input,
-  textarea {
-    width: 20rem;
-    font-size: 1rem;
-    color: #740074;
-    padding: 0.5rem;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    background: #f9f9fb;
-    box-shadow: 1px 1px 5px #2a002a63;
-
-    &:focus {
-      outline: none;
-    }
-  }
-
-  .connect-error {
-    color: #af002f;
-  }
-}
-
-.btn-center {
-  display: flex;
-  justify-content: center;
-}
-
-.connect-map-container {
-  display: block;
-  justify-content: center;
-  padding: 1rem;
-}
-
-.connect-map {
-  border: 1px solid transparent;
-  border-radius: 8px;
-  box-shadow: 1px 1px 5px #2a002a63;
-  margin-bottom: 1rem;
-}
-
-.connect-items {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0.5rem 1rem;
-
-  a {
-    text-decoration: none;
-    color: #740074;
-  }
-}
-
-.address {
-  grid-row-start: 1;
-  grid-row-end: 3;
-  text-align: center;
-}
-
-
-
 @media only screen and (min-width: 600px) {
   h1 {
     font-size: 2rem;
   }
-
-  /* Dogs */
-  .img-b {
-    display: block;
-    grid-row-start: 3;
-    grid-row-end: 4;
-  }
-
-  .dogs-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0.5rem 1rem;
-  }
-
-  .long-text-b {
-    grid-row-start: 3;
-    grid-row-end: 4;
-  }
-
 }
-
 
 
 @media only screen and (min-width: 768px) {
@@ -558,70 +96,7 @@ p {
   .container {
     max-width: 720px;
   }
-  
-
-  /* Footer */
-  .footer p {
-    font-size: 1rem;
-  }
-
-  /* Home */
-  .home-choice {
-    margin-top: 1.5rem;
-    padding: 1.5rem;
-  }
-
-
-  /* Dogs */
-  .img-a-small {
-    display: none;
-  }
-
-  .img-a {
-    display: block;
-  }
-
-  .dogs-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 0.5rem 1rem;
-    list-style: none;
-    padding-left: 0.5rem;
-    margin-bottom: 1rem;
-
-    h4 {
-      margin-top: 1rem;
-      text-align: center;
-    }
-  }
-
-  .long-text-c {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 3;
-  }
-
-
-  /* Daycare */
-  .prices {
-    width: 95%;
-    margin: auto;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-
-    div {
-      width: 33%;
-    }
-  }
-
-
-  /* Connect */
-  .connect-map {
-    height: 250px;
-  }
 }
-
 
 
 @media only screen and (min-width: 992px) {
@@ -636,273 +111,18 @@ p {
   .content {
     padding: 1rem;
   }
-  
-
-  /* Home */
-  .home-choice {
-    margin-top: 2rem;
-    padding: 2rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-  }
-
-  .choice {
-    width: 45%;
-  }
-
-
-  /* Videos */
-  .video-content {
-    padding: 0.5rem 1rem;
-
-    .video-section {
-      margin-top: 2rem;
-    }
-  }
-
-
-  /* Training */
-  .one-pic {
-    display: none;
-  }
-
-  .two-pics {
-    padding: 2rem 3rem;
-    display: flex;
-    justify-content: space-around;
-
-    .training-dog {
-      width: 45%;
-  
-      .training-img img {
-        border-radius: 8px;
-        display: block;
-        margin: auto;
-      }
-    }
-  }
-
-  /* Daycare */
-  .daycare-image {
-    .daycare-big-img {
-      display: flex;
-    }
-
-    .daycare-small-img {
-      display: none;
-    }
-  }
-  
-
-  /* About */
-  .about-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0.5rem;
-  }
-
-  .about-img {
-    width: 100%;
-
-    img {
-      margin: 0;
-      display: block;
-      margin-left: auto;
-    }
-  }
-  
-  .about-text {
-    padding: 0.5rem 1rem;
-  }
-    
-
-  /* Connect */
-  .connect-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .form-container {
-    height: 490px;
-    width: 360px;
-  }
-
-  .connect-details {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .connect-map {
-    width: 400px;
-  }
-}
-
+} 
 
 
 @media only screen and (min-width: 1200px) {
   .container {
     max-width: 1140px;
   }
-
-
-  /* Dogs */
-  .dogs-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, 200px);
-    gap: 0.5rem 1rem;
-    list-style: none;
-    padding-left: 0.5rem;
-    margin-bottom: 1rem;
-  }
-
-  .dogs-img {
-    justify-content: center;
-    padding: 0;
-    height: 400px;
-    width: 100%;
-    overflow: hidden;
-    border-radius: 8px;
-  }
-
-  .img-a {
-    grid-row-start: 1;
-    grid-row-end: 3;
-  }
-
-  .img-b {
-    grid-row-start: 2;
-    grid-row-end: 4;
-    grid-column: 4;
-  }
-
-  .long-text-b {
-    grid-row-start: 2;
-    grid-row-end: 4;
-    grid-column: 2;
-  }
-
-  .long-text-c {
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column: 3;
-  }
-
-
-  /* Videos */
-  .video-content {
-    .video-section {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 0.5rem;
-      margin: 1.5rem 0;
-
-      .youtube-video-container {
-        width: 100%;
-        height: 20%;
-        overflow: hidden;
-        padding-top: 56.25%;
-      }
-    }
-  }
-
-  /* Training */
-  .two-pics {
-    display: none;
-  }
-
-  .three-pics {
-    padding: 2rem 3rem;
-    display: flex;
-    justify-content: space-between;
-
-    .training-dog {
-      width: 30%;
-  
-      .training-img img {
-        border-radius: 8px;
-        display: block;
-        margin: auto;
-      }
-    }
-  }
-
-
-  /* Daycare */
-  .daycare-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70%;
-
-    .daycare-big-img {
-      display: none;
-    }
-
-    .daycare-both-img {
-      display: block;
-      width: 45%;
-      margin: 0.5rem;
-    }
-  }
-
-
-  /* About */
-  .about-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-  }
-  
-  .about-text {
-    padding: 1rem;
-  }
-
 }
+
 
 @media only screen and (min-width: 1400px) {
   .container {
     max-width: 1200px;
-  }
-
-
-  /* About */
-  .about-text {
-    padding: 0.5rem 2rem;
-  }
-  
-
-  /* Daycare */
-  .prices {
-    display: flex;
-    justify-content: space-around;
-  }
-
-
-  /* Connect */
-  .connect-details {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 2rem;
-  }
-
-  .connect-items {
-    display: block;
-    align-items: center;
-    text-align: center;
-  }
-
-  .connect-item {
-    margin-bottom: 1rem;
-  }
-
-  .connect-map {
-    height: 400px;
   }
 }
