--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,4 +1,3 @@
-/* Navbar */
 .navbar {
   background: #9f026e;
   color: #efe6e6;
@@ -10,8 +9,8 @@
   width: 100%;
   position: fixed;
   top: 0;
-  transition: 0.3s linear;
-  z-index: 1;
+  transition: 0.4s linear;
+  z-index: 1; 
 }
 
 .hidden {
@@ -20,7 +19,7 @@
   z-index: 40;
   position: fixed;
   top: -80px;
-  transition: 0.3s linear;
+  transition: 0.4s linear;
 }
 
 .navbar-container {
@@ -143,7 +142,6 @@
 }
 
 
-
 @media only screen and (min-width: 768px) {
   .logo-link {
     font-size: 1.5rem;
@@ -154,15 +152,18 @@
 @media only screen and (min-width: 992px) {
   .navbar {
     padding: 0.5rem;
-    height: fit-content;
+    height: 6.5rem;
+  }
+
+  .hidden {
+    top: -120px;
   }
 
   .navbar-container {
     width: 100%;
     padding: 0 0.2rem;
     display: block;
-    justify-content: center;
-    margin: auto;
+    text-align: center;
   }
 
   .logo-link {
@@ -176,6 +177,7 @@
 
   .collapse:not(.show) {
     display: flex;
+    justify-content: center;
   }
 
   .navbar-nav {
@@ -188,59 +190,33 @@
   .nav-links {
     li {
       word-wrap: break-word;
-      margin: 0.5rem;
+      margin: 0;
+      padding: 0 0.5rem;
+      border-right: 2px solid #efe6e6;
+      border-radius: 2px;
+
+      &:hover {
+        font-weight: 500;
+      }
+    }
+
+    .active {
+      border-bottom: 2px solid #efe6e6;
+      font-weight: 500;
+    }
+
+    .last {
+      border-right: none;
     }
 
     a {
       text-decoration: none;
       color: #efe6e6;
       font-size: 1rem;
+      padding-bottom: 0.3rem;
     }
   }
-
-  .dogs-dropdown {
-    position: relative;
-
-    i {
-      display: inline-block;
-      margin-left: 0.5rem;
-    }
-  }
-
-  .dogs-dropdown-content {
-    display: none;
-    background: #9f026df6;
-    border-radius: 8px;
-    position: absolute;
-    top: 2rem;
-    transition: ease-in-out 0.5s;
-    box-shadow: 1px 1px 5px #2a002a63;
-
-    li {
-      display: block;
-      cursor: pointer;
-      padding: 0.5rem 0;
-      border-bottom: 2px solid transparent;
-      font-weight: 500;
-    }
-
-    li:hover,
-    .active {
-      color: #ffffff;
-      font-weight: 600;
-    }
-
-  }
-
-  .dogs-dropdown:hover {
-    .dogs-dropdown-content {
-      display: block;
-      z-index: 2;
-    }
-  }
-    
 }
-
 
 
 @media only screen and (min-width: 1200px) {
@@ -248,7 +224,6 @@
     width: 90%;
   }
 }
-
 
 
 @media only screen and (min-width: 1400px) {
