navbar and form validation  not ready

--- a/src/styles/_videos.scss
+++ b/src/styles/_videos.scss
@@ -31,7 +31,7 @@
 
 @media only screen and (min-width: 992px) {
   .video-content {
-    padding: 0.5rem 1rem;
+    padding: 1rem;
 
     .video-section {
       margin-top: 2rem;
