--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -18,10 +18,12 @@
   width: 55%;
   -webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
+  transform: scale(0.9);
 
   &:hover {
     background: #ed92d280;
     box-shadow: 1px 1px 8px #2a002a63;
+    transform: scale(1);
   }
 }
 
@@ -65,7 +67,6 @@
 
 @media only screen and (min-width: 992px) {
   .home-choice {
-    margin-top: 2rem;
     padding: 2rem;
     display: flex;
     flex-direction: row;
