--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -2,7 +2,7 @@
   background: #9f026e;
   color: #efe6e6;
   border-bottom: 1px solid #8e0262;
-  height: 5rem;
+  height: 5.5rem;
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
@@ -14,7 +14,7 @@
 }
 
 .hidden {
-  height: 5rem;
+  height: 5.5rem;
   width: 100%;
   z-index: 40;
   position: fixed;
@@ -33,7 +33,7 @@
 .logo-link {
   display: inline-block;
   text-decoration: none;
-  color: #efe6ee;
+  color: #ffffff;
   font-size: 1.35rem;
   padding: 0.5rem;
   text-align: center;
@@ -62,44 +62,52 @@
     width: 2rem;
   }
 
-  .icon-left {
-    position: absolute;
-    top: 0;
-    right: 0;
-    transition: ease-in-out 0.5s;
-  }
-
-  .icon-right {
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: rotateY(180deg);
-    transition: ease-in-out 0.5s;
-    color: transparent;
-  }
-  
-  &:hover {
+  .closed {
     .icon-left {
-      transform: rotateY(180deg);
-      transition: ease-in-out 0.5s;
-      color: transparent;
+      position: absolute;
+      top: 0;
+      right: 0;
     }
 
+    .toggle-navbar {
+      position: absolute;
+      right: -3.5rem;
+      top: 2rem;
+      height: 0;
+      width: 0;
+      transition: transform 0.5s, height 2s, width 4s;
+    }
+
+    // .icon-right {
+    //   position: absolute;
+    //   top: 0;
+    //   right: 0;
+    //   color: transparent;
+    // }
+  }
+  
+  .open {
+    // .icon-left {
+    //   color: transparent;
+    // }
+
     .icon-right {
-      transform: rotateY(0deg);
-      transition: ease-in-out 0.5s;
+      position: absolute;
+      top: 0;
+      right: 0;
       color: #efe6e6;
     }
 
     .toggle-navbar {
       display: block;
       position: absolute;
-      right: 0.5rem;
+      right: -3.5rem;
       top: 2rem;
-      border-radius: 8px 0 8px 8px;
-      width: 250px;
-      background: #8e0262;
-      transition: ease-in-out 1s;
+      border-radius: 8px 0 0 8px;
+      padding: 1rem 0;
+      width: 350px;
+      background: #9f026df8;
+      transition: linear 5s;
     }
   }
   
@@ -142,9 +150,31 @@
 }
 
 
+@media only screen and (min-width: 600px) {
+  .navbar-toggler {
+    .open {
+      .toggle-navbar {
+        right: -4rem;
+      }
+    }
+    
+  }
+  
+}
+
+
 @media only screen and (min-width: 768px) {
   .logo-link {
     font-size: 1.5rem;
+  }
+
+  .navbar-toggler {
+    .open {
+      .toggle-navbar {
+        right: -5rem;
+      }
+    }
+    
   }
 }
 
@@ -156,6 +186,7 @@
   }
 
   .hidden {
+    height: 6.5rem;
     top: -120px;
   }
 
@@ -191,7 +222,7 @@
     li {
       word-wrap: break-word;
       margin: 0;
-      padding: 0 0.5rem;
+      padding: 0 1rem;
       border-right: 2px solid #efe6e6;
       border-radius: 2px;
 
@@ -235,7 +266,7 @@
     font-size: 1.5rem;
   }
 
-  .nav-links a {
-    font-size: 1rem;
+  .nav-links li {
+    padding: 0 1.5rem;
   }
 }
