--- a/src/styles/_dogs.scss
+++ b/src/styles/_dogs.scss
@@ -42,16 +42,16 @@
   
     h3 {
       text-align: center;
-      margin-bottom: 0.5rem;
+      margin: 0.5rem 0;
     }
 
     h4 {
-      margin-top: 0.5rem;
+      margin-top: 1rem;
       margin-bottom: 0.3rem;
     }
   
     p {
-      margin-bottom: 0;
+      margin-bottom: 0.5rem;
       margin-left: 0;
     }
   }
@@ -87,6 +87,12 @@
     display: block;
   }
 
+  .img-b {
+    grid-column-start: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
   .dogs-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -101,6 +107,11 @@
     }
   }
 
+  .long-text-b {
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
   .long-text-c {
     grid-row-start: 1;
     grid-row-end: 2;
@@ -110,45 +121,45 @@
 
 
 @media only screen and (min-width: 1200px) {
-  .dogs-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, 200px);
-    gap: 0.5rem 1rem;
-    list-style: none;
-    padding-left: 0.5rem;
-    margin-bottom: 1rem;
-  }
+  // .dogs-list {
+  //   display: grid;
+  //   grid-template-columns: 1fr 1fr 1fr;
+  //   grid-template-rows: repeat(3, 200px);
+  //   gap: 0.5rem 1rem;
+  //   list-style: none;
+  //   padding-left: 0.5rem;
+  //   margin-bottom: 1rem;
+  // }
 
-  .dogs-img {
-    justify-content: center;
-    padding: 0;
-    height: 400px;
-    width: 100%;
-    overflow: hidden;
-    border-radius: 8px;
-  }
+  // .dogs-img {
+  //   justify-content: center;
+  //   padding: 0;
+  //   height: 400px;
+  //   width: 100%;
+  //   overflow: hidden;
+  //   border-radius: 8px;
+  // }
 
-  .img-a {
-    grid-row-start: 1;
-    grid-row-end: 3;
-  }
+  // .img-a {
+  //   grid-row-start: 1;
+  //   grid-row-end: 3;
+  // }
 
-  .img-b {
-    grid-row-start: 2;
-    grid-row-end: 4;
-    grid-column: 4;
-  }
+  // .img-b {
+  //   grid-row-start: 2;
+  //   grid-row-end: 4;
+  //   grid-column: 3;
+  // }
 
-  .long-text-b {
-    grid-row-start: 2;
-    grid-row-end: 4;
-    grid-column: 2;
-  }
+  // .long-text-b {
+  //   grid-row-start: 2;
+  //   grid-row-end: 4;
+  //   grid-column: 2;
+  // }
 
-  .long-text-c {
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column: 3;
-  }
+  // .long-text-c {
+  //   grid-row-start: 1;
+  //   grid-row-end: 3;
+  //   grid-column: 3;
+  // }
 }
