--- a/src/styles/_dogs.scss
+++ b/src/styles/_dogs.scss
@@ -33,12 +33,16 @@
   padding-left: 0.5rem;
   margin-bottom: 1rem;
 
+  // .img-a-small {
+  //   width: 65%;
+  // }
+
   .dogs-list-item {
     border: 1px solid transparent;
     border-radius: 8px;
-    box-shadow: 1px 1px 5px #2a002a63;
+    // box-shadow: 1px 1px 5px #2a002a63;
     padding: 1rem;
-    margin-bottom: 0.5rem;
+    // margin-bottom: 0.5rem;
   
     h3 {
       text-align: center;
