--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -72,12 +72,16 @@
     }
 
     .toggle-navbar {
+      display: block;
       position: absolute;
-      right: -3.5rem;
+      right: -30rem;
       top: 3rem;
-      height: 0;
-      width: 0;
-      transition: width 0.5s ease-in-out;
+      border-radius: 8px 0 0 8px;
+      padding: 1rem 0;
+      width: 350px;
+      background: #9f026df8;
+      transform: scaleX(0);
+      transition: 0.5s ease-in-out ;
     }
 
     .icon-right {
@@ -118,7 +122,8 @@
       padding: 1rem 0;
       width: 350px;
       background: #9f026df8;
-      transition: width 0.5s ease-in-out;
+      transform: scaleX(1);
+      transition: ease-in-out 0.5s;
     }
   }
   
