--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -56,6 +56,7 @@
   border: 1px solid transparent;
   position: relative;
   transition: ease-in-out 0.8s;
+  cursor: pointer;
 
   i {
     height: 2rem;
