--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -22,7 +22,7 @@ html, body {
   font-family: 'Lato', sans-serif;
   color: #740074;
   background: #f9e4f2;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 #page-container {
@@ -115,6 +115,10 @@ p {
 
 
 @media only screen and (min-width: 1200px) {
+  p {
+    font-size: 1rem;
+  }
+
   .container {
     max-width: 1140px;
   }
