--- a/src/styles/_training.scss
+++ b/src/styles/_training.scss
@@ -21,7 +21,7 @@
   width: 90%;
   margin: auto;
 
-  h4 {
+  h2 {
     font-size: 1.2rem;
     text-align: center;
     margin-top: 0.5rem;
@@ -39,6 +39,7 @@
   .for-sale {
     padding-bottom: 0.5rem;
     font-style: italic;
+    font-weight: bold;
     font-size: small;
   }
 }
