--- a/src/styles/_dogs.scss
+++ b/src/styles/_dogs.scss
@@ -137,11 +137,11 @@
 
     .dogs-list-item {
       h2 {
-        margin: 0;
         font-size: 1.15rem;
       }
 
       h3 {
+        margin-top: 0.5rem;
         font-size: 1.05rem;
       }
     }
@@ -164,32 +164,35 @@
   }
 
   .img-b {
-    grid-row-start: 1;
-    grid-row-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 7;
     grid-column: 4;
   }
 
   .short-text {
     grid-row-start: 5;
     grid-row-end: 7;
-    grid-column: 3;
+    grid-column: 1;
   }
 
   .long-text-a {
     grid-row-start: 1;
-    grid-row-end: 4;
-    grid-column: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 5;
   }
 
   .long-text-b {
-    grid-row-start: 1;
+    grid-row-start: 3;
     grid-row-end: 5;
-    grid-column: 3;
+    grid-column-start: 2;
+    grid-column-end: 4;
   }
 
   .long-text-c {
-    grid-row-start: 4;
+    grid-row-start: 5;
     grid-row-end: 7;
-    grid-column: 2;
+    grid-column-start: 2;
+    grid-column-end: 4;
   }
 }
