--- a/src/styles/_connect.scss
+++ b/src/styles/_connect.scss
@@ -56,6 +56,7 @@
 .connect-map-container {
   display: block;
   justify-content: center;
+  text-align: center;
   padding: 1rem;
 }
 
@@ -69,7 +70,8 @@
 .connect-items {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 0.5rem 1rem;
+  gap: 0.5rem;
+  padding-right: 0.5rem;
 
   a {
     text-decoration: none;
@@ -112,6 +114,11 @@
 
   .connect-map {
     width: 400px;
+  }
+
+  .connect-items {
+    gap: 0.5rem 1rem;
+    padding-right: 0;
   }
 }
 
