--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -240,6 +240,7 @@
   }
 
   .nav-links {
+    
     li {
       word-wrap: break-word;
       margin: 0;
@@ -249,6 +250,7 @@
 
       &:hover {
         font-weight: 500;
+        color: #ffffff;
       }
     }
 
@@ -266,6 +268,10 @@
       color: #efe6e6;
       font-size: 1rem;
       padding-bottom: 0.3rem;
+
+      &:hover {
+        color: #ffffff;
+      }
     }
   }
 }
