--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -240,7 +240,6 @@
   }
 
   .nav-links {
-    
     li {
       word-wrap: break-word;
       margin: 0;
@@ -266,7 +265,7 @@
     a {
       text-decoration: none;
       color: #efe6e6;
-      font-size: 1rem;
+      font-size: 0.9rem;
       padding-bottom: 0.3rem;
 
       &:hover {
@@ -280,6 +279,12 @@
 @media only screen and (min-width: 1200px) {
   .navbar-container {
     width: 90%;
+  }
+
+  .nav-links {
+    a {
+      font-size: 1rem;
+    }
   }
 }
 
